--- a/src/components/ContactItem/ContactItem.css
+++ b/src/components/ContactItem/ContactItem.css
@@ -1,4 +1,4 @@
-.contactItem {
+.contact-item {
   width: 100%;
   height: 70px;
   background: #fff;
@@ -11,12 +11,11 @@
   margin-bottom: 0.5em;
 }
 
-
-.contactItem .contactItem__leftInfo {
+.contact-item__left-info {
   display: flex;
   justify-content: space-around;
 }
-.contactItem .contactItem__leftInfo .contactItem__leftInfo__avatar {
+.contact-item__left-info__avatar {
   height: 36px;
   width: 36px;
   min-width: 36px;
@@ -24,12 +23,12 @@
   background: #f00;
   margin: 0 15px;
 }
-.contactItem .contactItem__leftInfo .contactItem__leftInfo__userInfo {
+.contact-item__left-info__user-info {
   display: flex;
   flex-direction: column;
   text-align: left;
 }
-.contactItem .contactItem__leftInfo .contactItem__leftInfo__userInfo .contactItem__leftInfo__userInfo__name {
+.contact-item__left-info__user-info__name {
   font-family: Roboto;
   font-size: 14px;
   line-height: 19px;
@@ -37,26 +36,26 @@
   font-weight: 700;
   white-space: nowrap;
 }
-.contactItem .contactItem__leftInfo .contactItem__leftInfo__userInfo .contactItem__leftInfo__userInfo__lastMessage {
+.contact-item__left-info__user-info__last-message {
   font-family: Roboto;
   font-size: 14px;
   color: #000;
   line-height: 19px;
   white-space: nowrap;
 }
-.contactItem .contactItem__newMessages {
+.contact-item__new-messages {
   margin-right: 15px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   width: 30%;
 }
-.contactItem .contactItem__newMessages .contactItem__newMessages__date {
+.contact-item__new-messages__date {
   font-family: Roboto;
   font-size: 12px;
   color: #f25a41;
 }
-.contactItem .contactItem__newMessages .contactItem__newMessages__quantity {
+.contact-item__new-messages__quantity {
   height: 22px;
   width: 22px;
   background: #f25a41;
