--- a/src/components/CreateRoomLayout/CreateRoomLayout.css
+++ b/src/components/CreateRoomLayout/CreateRoomLayout.css
@@ -12,13 +12,11 @@
     display: flex;
     flex-direction: column;
     width: 80%;
-    margin: auto;
-    margin-bottom: 2em;
+    margin: auto auto 2em;
 }
 
 .container span{
-    padding: 0.5em;
-    padding-left: 0;
+    padding: 0.5em 0.5em 0.5em 0;
     color: #6f6c6a;
 
 }
@@ -37,8 +35,7 @@
 }
 
 .buttonContainer .button{
-    margin: auto;
-    margin-top: 1em;
+    margin: 1em auto auto;
     width: 70%;
     background-color: #f25a41;
     color: #fff;
