--- a/src/components/DateMessage/dataMessage.css
+++ b/src/components/DateMessage/dataMessage.css
@@ -3,10 +3,9 @@
   flex-direction: row;
 }
 
-
 .data-message {
   font-size: 12px;
-  color: #FFFFFF;W
+  color: #FFFFFF;
   margin-right: 5px;
   font-weight: 600;
 }
