--- a/src/components/ListItem/ListItem.css
+++ b/src/components/ListItem/ListItem.css
@@ -1,4 +1,4 @@
-.listItem {
+.list-item {
     width: 100%;
     height: 70px;
     background: #fff;
@@ -11,14 +11,14 @@
     margin-bottom: 0.5em;
 }
 
-.listItem .listItem__leftInfo {
+.list-item__left-info {
     overflow: hidden;
     display: flex;
     justify-content: left;
     width: 70%;
 }
 
-.listItem .listItem__leftInfo .listItem__leftInfo__avatar {
+.list-item__left-info__avatar {
     height: 36px;
     width: 36px;
     min-width: 36px;
@@ -27,18 +27,18 @@
     margin: 0 15px;
 }
 
-.listItem .listItem__leftInfo .listItem__leftInfo__userInfo {
+.list-item__left-info__user-info {
     display: flex;
     flex-direction: column;
     text-align: left;
     width: 70%;
 }
 
-.listItem__leftInfo__userInfo__lastMessage {
+.list-item__left-info__user-info__last-message {
     max-width: 90%;
 }
 
-.listItem .listItem__leftInfo .listItem__leftInfo__userInfo .listItem__leftInfo__userInfo__name {
+.list-item__left-info__user-info__name {
     font-family: Roboto;
     font-size: 14px;
     line-height: 19px;
@@ -48,7 +48,7 @@
     overflow: hidden;
 }
 
-.listItem .listItem__leftInfo .listItem__leftInfo__userInfo .listItem__leftInfo__userInfo__lastMessage {
+.list-item__left-info__user-info__last-message {
     font-family: Roboto;
     font-size: 14px;
     color: #000;
@@ -58,7 +58,7 @@
     overflow: hidden;
 }
 
-.listItem .listItem__newMessages {
+.list-item__new-messages {
     margin-right: 15px;
     display: flex;
     flex-direction: column;
@@ -66,13 +66,13 @@
     width: 30%;
 }
 
-.listItem .listItem__newMessages .listItem__newMessages__date {
+.list-item__new-messages__date {
     font-family: Roboto;
     font-size: 12px;
     color: #f25a41;
 }
 
-.listItem .listItem__newMessages .listItem__newMessages__quantity {
+.list-item__new-messages__quantity {
     height: 33px;
     width: 33px;
     background: #f25a41;
