--- a/src/components/LoginLayout/LoginLayout.css
+++ b/src/components/LoginLayout/LoginLayout.css
@@ -24,8 +24,7 @@
 }
 
 .inputContainer span{
-    padding: 0.5em;
-    padding-left: 0;
+    padding: 0.5em 0.5em 0.5em 0;
     color: #6f6c6a;
 }
 
@@ -41,8 +40,7 @@
 }
 
 .buttonContainer .button{
-    margin: auto;
-    margin-top: 1em;
+    margin: 1em auto auto;
     width: 70%;
     background-color: #f25a41;
     color: #fff;
