--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,34 +1,34 @@
 .Profile__main {
-  display: flex;
-flex-direction: column;
-margin-top: 62px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 62px;
 }
 
 .Profile__avatar {
-  margin: 0 auto;
-  width: 192px;
-  height: 192px;
+    margin: 0 auto;
+    width: 192px;
+    height: 192px;
 }
 
 .Profile__avatar .avatar__img__large {
-  width: 100%;
-  height: auto;
-  overflow: hidden;
-  background: transparent;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: transparent;
 }
 
-
-.Profile__info-container{
+.Profile__info-container {
     display: flex;
     flex-direction: column;
     text-align: center;
 }
 
-.Profile__info-container h2{
+.Profile__info-container h2 {
     padding: 1em;
 
 }
-.Profile__info-container span{
+
+.Profile__info-container span {
     display: inline-block;
     padding: 0.3em;
 }
