--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,16 +1,19 @@
-.header {
+.header-default {
     font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
     text-align: center;
-    padding: 1em;
+    padding: 0 2em;
     box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.09);
-    height: 3em;
-}
-
-.header h2 {
-    margin-top: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 68px;
+    background-color: white;
+    box-sizing: border-box;
 }
 
 .button {
