--- a/src/components/ChatListHeader/ChatListHeader.css
+++ b/src/components/ChatListHeader/ChatListHeader.css
@@ -5,20 +5,15 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    padding: 1em 2em;
+    padding: 0 2em;
     box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.09);
     margin-bottom: 1em;
-    height: 5em;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     background-color: white;
     box-sizing: border-box;
-}
-
-.chat-list-header h2 {
-    margin-top: 0;
 }
 
 .chat-list-header__button {
