--- a/src/components/ChatSettingsHeader/ChatSettingsHeader.css
+++ b/src/components/ChatSettingsHeader/ChatSettingsHeader.css
@@ -4,13 +4,9 @@
     flex-direction: row;
     justify-content: space-between;
     text-align: center;
-    padding: 1em 2em;
+    padding: 0 2em;
     box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.09);
     margin-bottom: 1em;
-}
-
-.chat-settings-header h2{
-    margin-top: 0;
 }
 
 .chat-settings-header__button{
