--- a/src/components/CreateRoomHeader/CreateRoomHeader.css
+++ b/src/components/CreateRoomHeader/CreateRoomHeader.css
@@ -4,15 +4,10 @@
     flex-direction: row;
     justify-content: space-between;
     text-align: center;
-    padding: 1em 2em;
+    padding: 0 2em;
     box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.09);
     margin-bottom: 1em;
-    height: 3em;
     align-items: center;
-}
-
-.header h2{
-    margin-top: 0;
 }
 
 .button{
