--- a/src/components/MessageInput/MessageInput.css
+++ b/src/components/MessageInput/MessageInput.css
@@ -2,18 +2,19 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 73%;
+    width: 80%;
     height: 100%;
+    border: 1px solid #b2b2b2;
+    border-radius: 10px;
 }
 
 .sendmessage__input {
     width: 100%;
     height: 100%;
     overflow: hidden;
-
-    padding: 0.8em 0;
+    padding: 0 15px;
     box-sizing: border-box;
-
+    line-height: 40px;
     font-size: 0.9em;
 }
 
@@ -21,7 +22,7 @@
     width: 100%;
 
     color: black;
-    font-size: 1.4em;
+    font-size: 1.2em;
     background: transparent;
 
     border: none;
@@ -29,5 +30,5 @@
 }
 
 .sendmessage__textarea::placeholder {
-    color: black;
+    color: #b2b2b2;
 }
