--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -13,7 +13,6 @@
 .Profile__avatar .avatar__img__large {
     width: 100%;
     height: 100%;
-    overflow: hidden;
     background: transparent;
 }
 
@@ -40,13 +39,8 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    padding: 1em 2em;
+    padding: 0 2em;
     box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.09);
-    height: 3em;
-}
-
-.header h2 {
-    margin-top: 0;
 }
 
 .button {
