--- a/src/components/SendMessage/SendMessage.css
+++ b/src/components/SendMessage/SendMessage.css
@@ -1,18 +1,14 @@
 .sendmessage {
-    height: 45px;
-    width: calc(100% - 40px);
-    margin: 15px 20px;
+    height: 38px;
+    width: 100%;
+    margin: 15px 0;
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    background: white;
-    border-radius: 16px;
-    color: white;
     font-family: Roboto;
     position: fixed;
-    bottom: 0;
 }
 
 .attachement__icon>i,
@@ -27,7 +23,7 @@
     border: none;
     background: transparent;
     color: white;
-    
+
 }
 
 .sendmessage__attachement {
